--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.18.0",
+    "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.5.0",
-    "nodemon": "^2.0.16"
+    "mongodb": "^4.6.0",
+    "nodemon": "^2.0.16",
+    "stripe": "^9.5.0"
   }
 }
